[gd_scene load_steps=8 format=3 uid="uid://d3gw8j7ttoeft"]

[ext_resource type="Script" path="res://scenes/game_the_safe/game_the_safe.gd" id="1_jlito"]
[ext_resource type="Texture2D" uid="uid://davla8msw0u5a" path="res://assets/graphics/green_back.jpeg" id="2_eu15q"]
[ext_resource type="Script" path="res://scenes/interaction_area/interaction_area.gd" id="3_uuyfr"]
[ext_resource type="Script" path="res://scenes/game_the_safe/areas.gd" id="3_xh0n1"]
[ext_resource type="PackedScene" uid="uid://cajs0tgregleq" path="res://scenes/game_the_safe/lock/lock.tscn" id="4_5qlp6"]
[ext_resource type="LabelSettings" uid="uid://7grq8g4ger4u" path="res://resources/label_settings/TheSafeAddSub.tres" id="5_fg4vr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2f45r"]
size = Vector2(143, 100)

[node name="GameTest" type="Node2D"]
script = ExtResource("1_jlito")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-71, -227)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_eu15q")

[node name="UI" type="Node2D" parent="."]

[node name="DeckMarker" type="Marker2D" parent="UI"]
position = Vector2(-205, 18)

[node name="DiscardPileMarker" type="Marker2D" parent="UI"]
position = Vector2(217, -88.4)

[node name="Areas" type="Node2D" parent="UI"]
script = ExtResource("3_xh0n1")

[node name="AdditionArea" type="Area2D" parent="UI/Areas"]
position = Vector2(72, 112)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_uuyfr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Areas/AdditionArea"]
shape = SubResource("RectangleShape2D_2f45r")

[node name="SubtractionArea" type="Area2D" parent="UI/Areas"]
position = Vector2(217, 112)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_uuyfr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Areas/SubtractionArea"]
shape = SubResource("RectangleShape2D_2f45r")

[node name="AddLabel" type="Label" parent="UI/Areas"]
offset_left = 34.6449
offset_top = 70.9716
offset_right = 105.645
offset_bottom = 166.972
text = "+"
label_settings = ExtResource("5_fg4vr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubLabel" type="Label" parent="UI/Areas"]
offset_left = 181.524
offset_top = 67.2717
offset_right = 252.524
offset_bottom = 163.272
text = "-"
label_settings = ExtResource("5_fg4vr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lines" type="Node2D" parent="UI"]
modulate = Color(1, 1, 1, 0.564706)

[node name="ColorRect" type="ColorRect" parent="UI/Lines"]
offset_left = -296.0
offset_top = 61.0
offset_right = 296.0
offset_bottom = 65.0
color = Color(1, 1, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="UI/Lines"]
offset_left = -3.09439
offset_top = 65.0
offset_right = 1.90561
offset_bottom = 194.0
color = Color(1, 1, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="UI/Lines"]
offset_left = 142.798
offset_top = 64.8872
offset_right = 147.798
offset_bottom = 193.887
color = Color(1, 1, 0, 1)

[node name="Cards" type="Node2D" parent="."]

[node name="Locks" type="Node2D" parent="."]
position = Vector2(0, 32)

[node name="Lock0" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(0, -147)
dependencies = Array[int]([1, 2])

[node name="Lock1" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-28, -115)
dependencies = Array[int]([3, 4])

[node name="Lock2" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(26, -114)
dependencies = Array[int]([4, 5])

[node name="Lock3" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-55, -83)
dependencies = Array[int]([6, 7])

[node name="Lock4" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-1, -82)
dependencies = Array[int]([7, 8])

[node name="Lock5" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(47, -84)
dependencies = Array[int]([8, 9])

[node name="Lock6" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-75, -49)
dependencies = Array[int]([10, 11])

[node name="Lock7" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-26, -50)
dependencies = Array[int]([11, 12])

[node name="Lock8" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(24, -50)
dependencies = Array[int]([12, 13])

[node name="Lock9" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(74, -50)
dependencies = Array[int]([13, 14])

[node name="Lock10" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-99, -15)

[node name="Lock12" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(-50, -16)

[node name="Lock13" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(0, -16)

[node name="Lock14" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(48, -17)

[node name="Lock15" parent="Locks" instance=ExtResource("4_5qlp6")]
position = Vector2(96, -16)

[node name="Hand" type="Node2D" parent="."]
position = Vector2(-282, 66)

[node name="Card0" type="Marker2D" parent="Hand"]
position = Vector2(35, 47)

[node name="Card1" type="Marker2D" parent="Hand"]
position = Vector2(84, 47)

[node name="Card2" type="Marker2D" parent="Hand"]
position = Vector2(134, 47)

[node name="Card3" type="Marker2D" parent="Hand"]
position = Vector2(185, 47)

[node name="Card4" type="Marker2D" parent="Hand"]
position = Vector2(236, 47)
